# ThermalCam_nRF54l15_MLX9064X

./: .gitignore  CMakeLists.txt  README.md  app.overlay  ei_forwarder.py  prj.conf  thermal_viewer.py
src/: ble_stream.c  ble_stream.h  main.c  mlx90640_api.c  mlx90640_api.h  mlx90640_i2c.c  mlx90640_i2c.h
